Polish translation of column labels, switching jqGrid L10N to pl

--- a/src/main/webapp/index.htm
+++ b/src/main/webapp/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Books</title>
+	<title>Książki</title>
 	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/base/jquery.ui.base.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/le-frog/jquery-ui.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css"/>
@@ -14,7 +14,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
-<script src="js/lib/grid.locale-en.js"></script>
+<script src="js/lib/grid.locale-pl.js"></script>
 <script src="js/lib/jquery.jqGrid.src.js"></script>
 
 <script src="js/main.js"></script>
