Using wro4j to manage web resources

--- a/src/main/webapp/index.htm
+++ b/src/main/webapp/index.htm
@@ -3,20 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>Books</title>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/base/jquery.ui.base.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/redmond/jquery-ui.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/themes/base/jquery.ui.base.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/themes/redmond/jquery-ui.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="w/index.css"/>
 </head>
 <body>
 
 <table id="grid"></table>
 <div id="pager"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
-<script src="js/lib/grid.locale-en.js"></script>
-<script src="js/lib/jquery.jqGrid.src.js"></script>
-
-<script src="js/index.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+<script src="w/index.js"></script>
 </body>
 </html>
