Introducing Spring Security

--- a/src/main/webapp/index.htm
+++ b/src/main/webapp/index.htm
@@ -1,16 +1,23 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Books</title>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/base/jquery.ui.base.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/redmond/jquery-ui.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css"/>
+    <meta charset="utf-8">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="Sat, 01 Dec 2001 00:00:00 GMT">
+    <title>Books</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/base/jquery.ui.base.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/redmond/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/ui.jqgrid.css"/>
 </head>
 <body>
 
 <table id="grid"></table>
 <div id="pager"></div>
+
+<hr/>
+
+<a href="j_spring_security_logout">Logout</a>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
