--- a/src/main/webapp/index.htm
+++ b/src/main/webapp/index.htm
@@ -17,7 +17,10 @@
 
 <hr/>
 
-<a href="j_spring_security_logout">Logout</a>
+<a href="j_spring_security_logout">Logout</a> |
+<a href="j_spring_security_switch_user?j_username=bob">Switch to <em>bob</em></a> |
+<a href="j_spring_security_switch_user?j_username=charlie">Switch to <em>charlie</em></a> |
+<a href="j_spring_security_exit_user">Switch back</a>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
